Swapnil | Fix css to align form fields

--- a/web/react-spa/src/styles/components/jobsCompare/jobs-compare.scss
+++ b/web/react-spa/src/styles/components/jobsCompare/jobs-compare.scss
@@ -5,5 +5,5 @@
 }
 
 .comparer-config {
-  padding: 10px;
+  padding-top: 20px;
 }
